# sc-mini

./: .gitignore  ATransformer.hs  Data.hs  DataIO.hs  DataUtil.hs  Deforester.hs  Demonstration.hs  Driving.hs  Examples.hs  Experiment1.hs  Experiment1Sll.hs  Folding.hs  Generator.hs  HOW  Interpreter.hs  Lang0.hs  Language.hs  NeighborhoodAnalysis.hs  Prototype.hs  README.md  Sample1.hs  Samples.hs  Settings.hs  Stack.hs  Supercompiler.hs  TODO.txt  Tests.hs  TreeInterpreter.hs  Treeless.hs  Treeless1.hs  Treeless10.hs  Treeless10Tests.hs  TreelessSInt.hs  TreelessTests.hs  Util.hs  defs.md  readme  sc-mini.cabal
src/: Data.hs  DataIO.hs  Deforester.hs  Demonstration.hs  Folding.hs  Supercompiler.hs
